add--index.html

--- a/submission.html
+++ b/submission.html
@@ -39,7 +39,7 @@
 		<!-- 导航 -->
 		<ul class="userclass">
 			<li>
-				<a href="" class="hover-left-nav">
+				<a href="">
 					<svg class="icon" aria-hidden="true">
 					  <use xlink:href="#icon-shoucang"></use>
 					</svg>
@@ -71,7 +71,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="">
+				<a href="" class="hover-left-nav">
 					<svg class="icon" aria-hidden="true">
 					  <use xlink:href="#icon-iconzhonggao14"></use>
 					</svg>
@@ -98,23 +98,12 @@
 	</div>
 	<div class="userright">
 	<div class="userright-nav">
-			<a class="hover" href="">
+			<a href="">
 				<svg class="icon" aria-hidden="true">
-				  <use xlink:href="#icon-category"></use>
+				  <use xlink:href="#icon-iconzhonggao14"></use>
 				</svg>
-				全部
+				投稿
 			</a>
-			<!-- <ul>
-				<li><a href="">动画</a></li>
-				<li><a href="">动画</a></li>
-				<li><a href="">动画</a></li>
-				<li><a href="">动画</a></li>
-				<li><a href="">动画</a></li>
-				<li><a href="">动画</a></li>
-				<li><a href="">动画</a></li>
-				<li><a href="">动画</a></li>
-				<li><a href="">动画</a></li>
-			</ul> -->
 		</div>
 		<div class="userright-nav">
 			<a class="hover" href="">
