增加文章列表页

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>投稿列表</title>
-	<link rel="stylesheet" type="text/css" href="./style/user.css">
 	<link rel="stylesheet" type="text/css" href="./style/common.css">
+	<link rel="stylesheet" type="text/css" href="./style/index.css">
 </head>
 <body>
 <header>
@@ -28,7 +28,105 @@
 	</nav>
 </header>
 <main>
-	
+	<div class="article">
+		<div class="articleSort">
+			<ul>
+				<li><a href="">综合</a></li>
+				<li><a href="">时间</a></li>
+				<li><a href="">评论</a></li>
+			</ul>
+		</div>
+		<div class="main-content">
+			<!-- 文章开始 -->
+			<div class="main-article">
+				<div class="article-icon">
+					<img src="./images/icon.jpg">
+				</div>
+				<div class="article-info">
+					<p class="article-title">这里不是UC的震惊党，也不是微信的是中国人就转，这里是圆桌哈哈～～</p>
+					<p class="article-details">
+						<a href="">This auth name</a>
+						&nbsp;&nbsp;/&nbsp;&nbsp;
+						<span>
+							发布于0000年00月00日&nbsp;&nbsp;00时00分&nbsp;&nbsp;
+							阅读:000000&nbsp;&nbsp;
+							评论:000000&nbsp;&nbsp;
+							收藏:000000
+						</span>
+					</p>
+					<p class="article-synopsis">
+						这里不是UC的震惊党，也不是微信的是中国人就转，这里是圆桌哈哈～～
+						这里不是UC的震惊党，也不是微信的是中国人就转，这里是圆桌哈哈～～
+						这里不是UC的震惊党，也不是微信的是中国人就转，这里是圆桌哈哈～～
+						这里不是UC的震惊党，也不是微信的是中国人就转，这里是圆桌哈哈～～
+						这里不是UC的震惊党，也不是微信的是中国人就转，这里是圆桌哈哈～～
+						这里不是UC的震惊党，也不是微信的是中国人就转，这里是圆桌哈哈～～
+						这里不是UC的震惊党，也不是微信的是中国人就转，这里是圆桌哈哈～～
+					</p>
+				</div>
+			</div>
+			<div class="main-article">
+				<div class="article-icon">
+					<img src="./images/icon.jpg">
+				</div>
+				<div class="article-info">
+					<p class="article-title">这里不是UC的震惊党，也不是微信的是中国人就转，这里是圆桌哈哈～～</p>
+					<p class="article-details">
+						<a href="">This auth name</a>
+						&nbsp;&nbsp;/&nbsp;&nbsp;
+						<span>
+							发布于0000年00月00日&nbsp;&nbsp;00时00分&nbsp;&nbsp;
+							阅读:000000&nbsp;&nbsp;
+							评论:000000&nbsp;&nbsp;
+							收藏:000000
+						</span>
+					</p>
+					<p class="article-synopsis">
+						这里不是UC的震惊党，也不是微信的是中国人就转，这里是圆桌哈哈～～
+						这里不是UC的震惊党，也不是微信的是中国人就转，这里是圆桌哈哈～～
+						这里不是UC的震惊党，也不是微信的是中国人就转，这里是圆桌哈哈～～
+						这里不是UC的震惊党，也不是微信的是中国人就转，这里是圆桌哈哈～～
+						这里不是UC的震惊党，也不是微信的是中国人就转，这里是圆桌哈哈～～
+						这里不是UC的震惊党，也不是微信的是中国人就转，这里是圆桌哈哈～～
+						这里不是UC的震惊党，也不是微信的是中国人就转，这里是圆桌哈哈～～
+					</p>
+				</div>
+			</div>
+			<!-- 文章结束 -->
+			<!-- 分页 -->
+			<div class="article-pages">
+				<ul>
+					<!-- 首页 -->
+					<li class="hover"><a href="">&laquo;</a></li>
+					<!-- 上一页 -->
+					<li><a href="">&lsaquo;</a></li>
+					<li><a href="">1</a></li>
+					<li><a href="">2</a></li>
+					<li><a href="">3</a></li>
+					<li><a href="">4</a></li>
+					<li><a href="">5</a></li>
+					<!-- 下一页 -->
+					<li><a href="">&rsaquo;</a></li>
+					<!-- 尾页 -->
+					<li><a href="">&raquo;</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="articleTop">
+		<div class="articleList">
+			热度
+		</div>
+		<ul>
+			<li style="border: none;"><a href="">这事文章去这事文章去这事文章去这事文章去</a></li>
+			<li><a href="">这事文章去这事文章去这事文章去这事文章去</a></li>
+			<li><a href="">这事文章去这事文章去这事文章去这事文章去</a></li>
+			<li><a href="">这事文章去这事文章去这事文章去这事文章去</a></li>
+			<li><a href="">这事文章去这事文章去这事文章去这事文章去</a></li>
+			<li><a href="">这事文章去这事文章去这事文章去这事文章去</a></li>
+			<li><a href="">这事文章去这事文章去这事文章去这事文章去</a></li>
+		</ul>
+	</div>
 </main>
 <!-- 以下是js部分 -->
 <!-- icon -->
