--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 					<img src="./images/icon.jpg">
 				</div>
 				<div class="article-info">
-					<p class="article-title">这里不是UC的震惊党，也不是微信的是中国人就转，这里是圆桌哈哈～～</p>
+					<p class="article-title">
+						这里不是UC的震惊党，也不是微信的是中国人就转，这里是圆桌哈哈～～
+					</p>
 					<p class="article-details">
 						<a href="">This auth name</a>
 						&nbsp;&nbsp;/&nbsp;&nbsp;
